--- a/Front/Css/worldMap.css
+++ b/Front/Css/worldMap.css
@@ -54,7 +54,7 @@
   text-shadow: 2px 2px #212421,
                1px 1px #212021;
   font-family: Verdana, sans-serif;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: normal;
   margin: 5px 0;
 }
@@ -154,11 +154,106 @@
     border-radius: 7px;
 }
 
-html, body {
+/* html, body {
     margin: 0;
     height: 100%;
+} */
+
+.rowBigBtn {
+    height: 5em;
+    color: white;
 }
 
-.potironBtn {
-    
+.bigBtn:hover {
+    cursor: pointer;
+} 
+
+.bigBtn {
+    background: #2972a3;
+    background-image: -webkit-linear-gradient(top, #2972a3, #0a2536);
+    background-image: -moz-linear-gradient(top, #2972a3, #0a2536);
+    background-image: -ms-linear-gradient(top, #2972a3, #0a2536);
+    background-image: -o-linear-gradient(top, #2972a3, #0a2536);
+    background-image: linear-gradient(to bottom, #2972a3, #0a2536);
+    -webkit-border-radius: 5;
+    -moz-border-radius: 5;
+    border-radius: 5px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 30px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+
+.bigBtn:hover {
+    background: #2e87bf;
+    background-image: -webkit-linear-gradient(top, #2e87bf, #244357);
+    background-image: -moz-linear-gradient(top, #2e87bf, #244357);
+    background-image: -ms-linear-gradient(top, #2e87bf, #244357);
+    background-image: -o-linear-gradient(top, #2e87bf, #244357);
+    background-image: linear-gradient(to bottom, #2e87bf, #244357);
+    text-decoration: none;
+  }
+
+.btnRed {
+    background: #cc265e;
+    background-image: -webkit-linear-gradient(top, #cc265e, #360a24);
+    background-image: -moz-linear-gradient(top, #cc265e, #360a24);
+    background-image: -ms-linear-gradient(top, #cc265e, #360a24);
+    background-image: -o-linear-gradient(top, #cc265e, #360a24);
+    background-image: linear-gradient(to bottom, #cc265e, #360a24);
+    -webkit-border-radius: 5;
+    -moz-border-radius: 5;
+    border-radius: 5px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 30px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+
+.btnRed:hover {
+    background: #bd2fbd;
+    background-image: -webkit-linear-gradient(top, #bd2fbd, #572557);
+    background-image: -moz-linear-gradient(top, #bd2fbd, #572557);
+    background-image: -ms-linear-gradient(top, #bd2fbd, #572557);
+    background-image: -o-linear-gradient(top, #bd2fbd, #572557);
+    background-image: linear-gradient(to bottom, #bd2fbd, #572557);
+    text-decoration: none;
+}
+  
+li:hover {
+    cursor: pointer;
+}
+
+.btnCloseFooter {
+    background: #b2d9de;
+    background-image: -webkit-linear-gradient(top, #b2d9de, #b3cacc);
+    background-image: -moz-linear-gradient(top, #b2d9de, #b3cacc);
+    background-image: -ms-linear-gradient(top, #b2d9de, #b3cacc);
+    background-image: -o-linear-gradient(top, #b2d9de, #b3cacc);
+    background-image: linear-gradient(to bottom, #b2d9de, #b3cacc);
+    -webkit-border-radius: 5;
+    -moz-border-radius: 5;
+    border-radius: 5px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 30px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btnCloseFooter:hover {
+    background: #2facbd;
+    background-image: -webkit-linear-gradient(top, #2facbd, #c1d5de);
+    background-image: -moz-linear-gradient(top, #2facbd, #c1d5de);
+    background-image: -ms-linear-gradient(top, #2facbd, #c1d5de);
+    background-image: -o-linear-gradient(top, #2facbd, #c1d5de);
+    background-image: linear-gradient(to bottom, #2facbd, #c1d5de);
+    text-decoration: none;
+  }
+
+  input.form-control {
+    background-color: #63AEEB;
+    height: 100%;
 }
