--- a/Front/Css/worldMap.css
+++ b/Front/Css/worldMap.css
@@ -289,8 +289,9 @@ div {
     -webkit-border-radius: 7px;
     -moz-border-radius: 7px;
     border-radius: 7px;
-    font-size: 2em;
+    font-size: 1em;
     color: white;
+    opacity: 0.7;
   }
 
   .combatInfoEnnemie {
@@ -320,7 +321,7 @@ div {
     -webkit-border-radius: 7px;
     -moz-border-radius: 7px;
     border-radius: 7px;
-    font-size: 2em;
+    font-size: 1em;
     color: white;
     opacity: 0.7;
   }
